<resources>
    <string name="app_name">Deezer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="create_new_account">Create new account</string>
    <string name="password_not_matching">Password not matching</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_artist_name">Damso</string>
</resources>