<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragments.login.LoginFragment"
    android:background="@color/white"
    android:gravity="center">

    <LinearLayout
        android:background="@drawable/rounded_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/registerTextView"
            android:textColor="@color/primary"
            android:text="Create a new account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout
>




</LinearLayout>